fix(editor): button block alignment
Closes #55

--- a/src/editor/editor/style.scss
+++ b/src/editor/editor/style.scss
@@ -6,3 +6,8 @@
 .editor-post-title {
 	display: none;
 }
+
+.wp-block-button {
+	margin-left: auto !important;
+	margin-right: auto !important;
+}
